k8s/istio/gateway.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: snack-shop-gateway
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 9000
        name: http
        protocol: HTTP
      hosts:
        - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: app-route
spec:
  hosts:
    - "*"
  gateways:
    - snack-shop-gateway
  http:
    - match:
        - uri:
            prefix: /snack-shop
      route:
        - destination:
            host: snack-shop-api
            port:
              number: 9000
